<resources>
    <string name="google_maps_api_key">AIzaSyA_vTspKZSfca6lBFqQ467SDPB8gW8DAxA</string>
    <string name="app_name">Daily Activity Log</string>
    <string name="log_title_hint">Enter a name for the activity.</string>
    <string name="log_title_label">Title</string>
    <string name="log_details_label">Details</string>
    <string name="date_button_label">Pick a date</string>
    <string name="date_label">dd-mm-yyyy</string>
    <string name="date_picker_title">Date of Activity</string>
    <string name="new_log">Add Log</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s activities</string>
    <string name="details_label">Details</string>
    <string name="delete_button">Delete Log</string>
    <string name="toast_deleted_confirmation">Log Deleted</string>
    <string name="save_log_button">Save Log</string>
    <string name="edittext_comment_section">Enter a comment here</string>
    <string name="category_selection_string">Pick a category</string>
    <string name="log_saved_confirmation">Log Saved</string>
    <string name="text_enter_a_username">Enter your name</string>
    <string name="text_display_username">Your username: </string>
    <string name="text_enter_a_id">Enter an ID</string>
    <string name="text_display_id">Your ID: </string>
    <string name="text_select_gender">Select Gender</string>
    <string name="text_display_gender">Gender: </string>
    <string name="text_spinner_gender_hint">Select your gender</string>
    <string name="text_settings">Settings</string>
    <string name="text_enter_email">Enter your email here</string>
    <string name="text_display_email">Email: </string>
    <string name="text_save_user">Save User</string>
    <string name="text_comment_section"><b>Comment</b></string>
    <string name="text_add_user_section"><b>Create a new user here</b></string>
    <string name="button_log_location">Get Your Location</string>
    <string name="text_location_text">Location: </string>
    <string name="text_category"><b>Type of Activity:</b></string>
    <string name="text_duration">Duration: </string>
    <string name="text_enter_duration">Enter Duration Here</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="categories_array">
        <item>Work</item>
        <item>Study</item>
        <item>Leisure</item>
        <item>Sport</item>
    </string-array>
</resources>
