<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_username"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/text_display_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textview_display_email"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/text_display_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textview_gender"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/text_display_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textview_id"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/text_display_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

    <TextView
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/text_comment_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


    <EditText
        android:id="@+id/edittext_user_comment"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_comment_section"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:text="@string/text_add_user_section"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/edittext_username_entry"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:hint="@string/text_enter_a_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edittext_email_entry"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:hint="@string/text_enter_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_spinner_gender_hint"/>

        <Spinner
            android:id="@+id/spinner_select_gender"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:tooltipText="@string/text_spinner_gender_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>