<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/fragment_log"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/view_camera_and_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/details_label"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout
        android:id="@+id/first_custom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview_type_of_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="230dp"
            android:layout_marginTop="3dp"
            android:text="@string/text_category"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/categories_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="150dp"
            android:entries="@array/categories_array">
        </Spinner>

        <TextView
            android:id="@+id/textview_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_type_of_activity"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="260dp"
            android:text="@string/text_location_text"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textview_display_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_type_of_activity"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="80dp"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp">

        <TextView
            android:id="@+id/textview_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="260dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_duration"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edittext_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:layout_marginLeft="80dp"
            android:hint="@string/text_enter_duration"
            android:layout_marginRight="130dp"
            android:textSize="13dp"/>
    </RelativeLayout>


    <EditText
        android:id="@+id/comment_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/edittext_comment_section"/>

</LinearLayout>